cats/src/main/java/com/example/cats/Error/Exception/FactsUnexpectedErrorException.java
package com.example.cats.Error.Exception;

public class FactsUnexpectedErrorException extends RuntimeException{

    public FactsUnexpectedErrorException(Throwable cause) {
        super(cause);
    }
}
